mark bbox based pointcloud indices in description